hw4.2020/parser.output
Terminals unused in grammar

    MK_DOT
    ERROR


State 203 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: global_decl_list
    2        | %empty

    3 global_decl_list: global_decl_list global_decl
    4                 | global_decl

    5 global_decl: decl_list function_decl
    6            | function_decl

    7 function_decl: type ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
    8              | VOID ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
    9              | type ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
   10              | VOID ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE

   11 param_list: param_list MK_COMMA param
   12           | param

   13 param: type ID
   14      | type ID dim_fn

   15 dim_fn: MK_LB expr_null MK_RB
   16       | dim_fn MK_LB expr MK_RB

   17 expr_null: expr
   18          | %empty

   19 block: decl_list stmt_list
   20      | stmt_list
   21      | decl_list
   22      | %empty

   23 decl_list: decl_list decl
   24          | decl

   25 decl: type_decl
   26     | var_decl

   27 type_decl: TYPEDEF type id_list MK_SEMICOLON
   28          | TYPEDEF VOID id_list MK_SEMICOLON

   29 var_decl: type init_id_list MK_SEMICOLON

   30 type: INT
   31     | FLOAT
   32     | ID

   33 id_list: ID
   34        | id_list MK_COMMA ID
   35        | id_list MK_COMMA ID dim_decl
   36        | ID dim_decl

   37 dim_decl: MK_LB cexpr MK_RB
   38         | dim_decl MK_LB cexpr MK_RB

   39 cexpr: cexpr OP_PLUS mcexpr
   40      | cexpr OP_MINUS mcexpr
   41      | mcexpr

   42 mcexpr: mcexpr OP_TIMES cfactor
   43       | mcexpr OP_DIVIDE cfactor
   44       | cfactor

   45 cfactor: CONST
   46        | MK_LPAREN cexpr MK_RPAREN

   47 init_id_list: init_id
   48             | init_id_list MK_COMMA init_id

   49 init_id: ID
   50        | ID dim_decl
   51        | ID OP_ASSIGN relop_expr

   52 stmt_list: stmt_list stmt
   53          | stmt

   54 stmt: MK_LBRACE block MK_RBRACE
   55     | WHILE MK_LPAREN test MK_RPAREN stmt
   56     | FOR MK_LPAREN assign_expr_list MK_SEMICOLON relop_expr_list MK_SEMICOLON assign_expr_list MK_RPAREN stmt
   57     | var_ref OP_ASSIGN relop_expr MK_SEMICOLON
   58     | IF MK_LPAREN test MK_RPAREN stmt
   59     | IF MK_LPAREN test MK_RPAREN stmt ELSE stmt
   60     | ID MK_LPAREN relop_expr_list MK_RPAREN MK_SEMICOLON
   61     | MK_SEMICOLON
   62     | RETURN MK_SEMICOLON
   63     | RETURN relop_expr MK_SEMICOLON

   64 assign_expr_list: nonempty_assign_expr_list
   65                 | %empty

   66 nonempty_assign_expr_list: nonempty_assign_expr_list MK_COMMA assign_expr
   67                          | assign_expr

   68 test: assign_expr

   69 assign_expr: ID OP_ASSIGN relop_expr
   70            | relop_expr

   71 relop_expr: relop_term
   72           | relop_expr OP_OR relop_term

   73 relop_term: relop_factor
   74           | relop_term OP_AND relop_factor

   75 relop_factor: expr
   76             | expr rel_op expr

   77 rel_op: OP_EQ
   78       | OP_GE
   79       | OP_LE
   80       | OP_NE
   81       | OP_GT
   82       | OP_LT

   83 relop_expr_list: nonempty_relop_expr_list
   84                | %empty

   85 nonempty_relop_expr_list: nonempty_relop_expr_list MK_COMMA relop_expr
   86                         | relop_expr

   87 expr: expr add_op term
   88     | term

   89 add_op: OP_PLUS
   90       | OP_MINUS

   91 term: term mul_op factor
   92     | factor

   93 mul_op: OP_TIMES
   94       | OP_DIVIDE

   95 factor: MK_LPAREN relop_expr MK_RPAREN
   96       | OP_MINUS MK_LPAREN relop_expr MK_RPAREN
   97       | OP_NOT MK_LPAREN relop_expr MK_RPAREN
   98       | CONST
   99       | OP_MINUS CONST
  100       | OP_NOT CONST
  101       | ID MK_LPAREN relop_expr_list MK_RPAREN
  102       | OP_MINUS ID MK_LPAREN relop_expr_list MK_RPAREN
  103       | OP_NOT ID MK_LPAREN relop_expr_list MK_RPAREN
  104       | var_ref
  105       | OP_MINUS var_ref
  106       | OP_NOT var_ref

  107 var_ref: ID
  108        | ID dim_list

  109 dim_list: dim_list MK_LB expr MK_RB
  110         | MK_LB expr MK_RB


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <lexeme> (258) 7 8 9 10 13 14 32 33 34 35 36 49 50 51 60 69 101 102 103 107 108
    CONST <const1> (259) 45 98 99 100
    VOID (260) 8 10 28
    INT (261) 30
    FLOAT (262) 31
    IF (263) 58 59
    ELSE (264) 59
    WHILE (265) 55
    FOR (266) 56
    TYPEDEF (267) 27 28
    OP_ASSIGN (268) 51 57 69
    OP_OR (269) 72
    OP_AND (270) 74
    OP_NOT (271) 97 100 103 106
    OP_EQ (272) 77
    OP_NE (273) 80
    OP_GT (274) 81
    OP_LT (275) 82
    OP_GE (276) 78
    OP_LE (277) 79
    OP_PLUS (278) 39 89
    OP_MINUS (279) 40 90 96 99 102 105
    OP_TIMES (280) 42 93
    OP_DIVIDE (281) 43 94
    MK_LB (282) 15 16 37 38 109 110
    MK_RB (283) 15 16 37 38 109 110
    MK_LPAREN (284) 7 8 9 10 46 55 56 58 59 60 95 96 97 101 102 103
    MK_RPAREN (285) 7 8 9 10 46 55 56 58 59 60 95 96 97 101 102 103
    MK_LBRACE (286) 7 8 9 10 54
    MK_RBRACE (287) 7 8 9 10 54
    MK_COMMA (288) 11 34 35 48 66 85
    MK_SEMICOLON (289) 27 28 29 56 57 60 61 62 63
    MK_DOT (290)
    ERROR (291)
    RETURN (292) 62 63


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    program <node> (39)
        on left: 1 2
        on right: 0
    global_decl_list <node> (40)
        on left: 3 4
        on right: 1 3
    global_decl <node> (41)
        on left: 5 6
        on right: 3 4
    function_decl <node> (42)
        on left: 7 8 9 10
        on right: 5 6
    param_list <node> (43)
        on left: 11 12
        on right: 7 8 11
    param <node> (44)
        on left: 13 14
        on right: 11 12
    dim_fn <node> (45)
        on left: 15 16
        on right: 14 16
    expr_null <node> (46)
        on left: 17 18
        on right: 15
    block <node> (47)
        on left: 19 20 21 22
        on right: 7 8 9 10 54
    decl_list <node> (48)
        on left: 23 24
        on right: 5 19 21 23
    decl <node> (49)
        on left: 25 26
        on right: 23 24
    type_decl <node> (50)
        on left: 27 28
        on right: 25
    var_decl <node> (51)
        on left: 29
        on right: 26
    type <node> (52)
        on left: 30 31 32
        on right: 7 9 13 14 27 29
    id_list <node> (53)
        on left: 33 34 35 36
        on right: 27 28 34 35
    dim_decl <node> (54)
        on left: 37 38
        on right: 35 36 38 50
    cexpr <node> (55)
        on left: 39 40 41
        on right: 37 38 39 40 46
    mcexpr <node> (56)
        on left: 42 43 44
        on right: 39 40 41 42 43
    cfactor <node> (57)
        on left: 45 46
        on right: 42 43 44
    init_id_list <node> (58)
        on left: 47 48
        on right: 29 48
    init_id <node> (59)
        on left: 49 50 51
        on right: 47 48
    stmt_list <node> (60)
        on left: 52 53
        on right: 19 20 52
    stmt <node> (61)
        on left: 54 55 56 57 58 59 60 61 62 63
        on right: 52 53 55 56 58 59
    assign_expr_list <node> (62)
        on left: 64 65
        on right: 56
    nonempty_assign_expr_list <node> (63)
        on left: 66 67
        on right: 64 66
    test <node> (64)
        on left: 68
        on right: 55 58 59
    assign_expr <node> (65)
        on left: 69 70
        on right: 66 67 68
    relop_expr <node> (66)
        on left: 71 72
        on right: 51 57 63 69 70 72 85 86 95 96 97
    relop_term <node> (67)
        on left: 73 74
        on right: 71 72 74
    relop_factor <node> (68)
        on left: 75 76
        on right: 73 74
    rel_op <node> (69)
        on left: 77 78 79 80 81 82
        on right: 76
    relop_expr_list <node> (70)
        on left: 83 84
        on right: 56 60 101 102 103
    nonempty_relop_expr_list <node> (71)
        on left: 85 86
        on right: 83 85
    expr <node> (72)
        on left: 87 88
        on right: 16 17 75 76 87 109 110
    add_op <node> (73)
        on left: 89 90
        on right: 87
    term <node> (74)
        on left: 91 92
        on right: 87 88 91
    mul_op <node> (75)
        on left: 93 94
        on right: 91
    factor <node> (76)
        on left: 95 96 97 98 99 100 101 102 103 104 105 106
        on right: 91 92
    var_ref <node> (77)
        on left: 107 108
        on right: 57 104 105 106
    dim_list <node> (78)
        on left: 109 110
        on right: 108 109


State 0

    0 $accept: . program $end

    ID       shift, and go to state 1
    VOID     shift, and go to state 2
    INT      shift, and go to state 3
    FLOAT    shift, and go to state 4
    TYPEDEF  shift, and go to state 5

    $default  reduce using rule 2 (program)

    program           go to state 6
    global_decl_list  go to state 7
    global_decl       go to state 8
    function_decl     go to state 9
    decl_list         go to state 10
    decl              go to state 11
    type_decl         go to state 12
    var_decl          go to state 13
    type              go to state 14


State 1

   32 type: ID .

    $default  reduce using rule 32 (type)


State 2

    8 function_decl: VOID . ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   10              | VOID . ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE

    ID  shift, and go to state 15


State 3

   30 type: INT .

    $default  reduce using rule 30 (type)


State 4

   31 type: FLOAT .

    $default  reduce using rule 31 (type)


State 5

   27 type_decl: TYPEDEF . type id_list MK_SEMICOLON
   28          | TYPEDEF . VOID id_list MK_SEMICOLON

    ID     shift, and go to state 1
    VOID   shift, and go to state 16
    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4

    type  go to state 17


State 6

    0 $accept: program . $end

    $end  shift, and go to state 18


State 7

    1 program: global_decl_list .
    3 global_decl_list: global_decl_list . global_decl

    ID       shift, and go to state 1
    VOID     shift, and go to state 2
    INT      shift, and go to state 3
    FLOAT    shift, and go to state 4
    TYPEDEF  shift, and go to state 5

    $default  reduce using rule 1 (program)

    global_decl    go to state 19
    function_decl  go to state 9
    decl_list      go to state 10
    decl           go to state 11
    type_decl      go to state 12
    var_decl       go to state 13
    type           go to state 14


State 8

    4 global_decl_list: global_decl .

    $default  reduce using rule 4 (global_decl_list)


State 9

    6 global_decl: function_decl .

    $default  reduce using rule 6 (global_decl)


State 10

    5 global_decl: decl_list . function_decl
   23 decl_list: decl_list . decl

    ID       shift, and go to state 1
    VOID     shift, and go to state 2
    INT      shift, and go to state 3
    FLOAT    shift, and go to state 4
    TYPEDEF  shift, and go to state 5

    function_decl  go to state 20
    decl           go to state 21
    type_decl      go to state 12
    var_decl       go to state 13
    type           go to state 14


State 11

   24 decl_list: decl .

    $default  reduce using rule 24 (decl_list)


State 12

   25 decl: type_decl .

    $default  reduce using rule 25 (decl)


State 13

   26 decl: var_decl .

    $default  reduce using rule 26 (decl)


State 14

    7 function_decl: type . ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
    9              | type . ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
   29 var_decl: type . init_id_list MK_SEMICOLON

    ID  shift, and go to state 22

    init_id_list  go to state 23
    init_id       go to state 24


State 15

    8 function_decl: VOID ID . MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   10              | VOID ID . MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE

    MK_LPAREN  shift, and go to state 25


State 16

   28 type_decl: TYPEDEF VOID . id_list MK_SEMICOLON

    ID  shift, and go to state 26

    id_list  go to state 27


State 17

   27 type_decl: TYPEDEF type . id_list MK_SEMICOLON

    ID  shift, and go to state 26

    id_list  go to state 28


State 18

    0 $accept: program $end .

    $default  accept


State 19

    3 global_decl_list: global_decl_list global_decl .

    $default  reduce using rule 3 (global_decl_list)


State 20

    5 global_decl: decl_list function_decl .

    $default  reduce using rule 5 (global_decl)


State 21

   23 decl_list: decl_list decl .

    $default  reduce using rule 23 (decl_list)


State 22

    7 function_decl: type ID . MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
    9              | type ID . MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
   49 init_id: ID .
   50        | ID . dim_decl
   51        | ID . OP_ASSIGN relop_expr

    OP_ASSIGN  shift, and go to state 29
    MK_LB      shift, and go to state 30
    MK_LPAREN  shift, and go to state 31

    $default  reduce using rule 49 (init_id)

    dim_decl  go to state 32


State 23

   29 var_decl: type init_id_list . MK_SEMICOLON
   48 init_id_list: init_id_list . MK_COMMA init_id

    MK_COMMA      shift, and go to state 33
    MK_SEMICOLON  shift, and go to state 34


State 24

   47 init_id_list: init_id .

    $default  reduce using rule 47 (init_id_list)


State 25

    8 function_decl: VOID ID MK_LPAREN . param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   10              | VOID ID MK_LPAREN . MK_RPAREN MK_LBRACE block MK_RBRACE

    ID         shift, and go to state 1
    INT        shift, and go to state 3
    FLOAT      shift, and go to state 4
    MK_RPAREN  shift, and go to state 35

    param_list  go to state 36
    param       go to state 37
    type        go to state 38


State 26

   33 id_list: ID .
   36        | ID . dim_decl

    MK_LB  shift, and go to state 30

    $default  reduce using rule 33 (id_list)

    dim_decl  go to state 39


State 27

   28 type_decl: TYPEDEF VOID id_list . MK_SEMICOLON
   34 id_list: id_list . MK_COMMA ID
   35        | id_list . MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 40
    MK_SEMICOLON  shift, and go to state 41


State 28

   27 type_decl: TYPEDEF type id_list . MK_SEMICOLON
   34 id_list: id_list . MK_COMMA ID
   35        | id_list . MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 40
    MK_SEMICOLON  shift, and go to state 42


State 29

   51 init_id: ID OP_ASSIGN . relop_expr

    ID         shift, and go to state 43
    CONST      shift, and go to state 44
    OP_NOT     shift, and go to state 45
    OP_MINUS   shift, and go to state 46
    MK_LPAREN  shift, and go to state 47

    relop_expr    go to state 48
    relop_term    go to state 49
    relop_factor  go to state 50
    expr          go to state 51
    term          go to state 52
    factor        go to state 53
    var_ref       go to state 54


State 30

   37 dim_decl: MK_LB . cexpr MK_RB

    CONST      shift, and go to state 55
    MK_LPAREN  shift, and go to state 56

    cexpr    go to state 57
    mcexpr   go to state 58
    cfactor  go to state 59


State 31

    7 function_decl: type ID MK_LPAREN . param_list MK_RPAREN MK_LBRACE block MK_RBRACE
    9              | type ID MK_LPAREN . MK_RPAREN MK_LBRACE block MK_RBRACE

    ID         shift, and go to state 1
    INT        shift, and go to state 3
    FLOAT      shift, and go to state 4
    MK_RPAREN  shift, and go to state 60

    param_list  go to state 61
    param       go to state 37
    type        go to state 38


State 32

   38 dim_decl: dim_decl . MK_LB cexpr MK_RB
   50 init_id: ID dim_decl .

    MK_LB  shift, and go to state 62

    $default  reduce using rule 50 (init_id)


State 33

   48 init_id_list: init_id_list MK_COMMA . init_id

    ID  shift, and go to state 63

    init_id  go to state 64


State 34

   29 var_decl: type init_id_list MK_SEMICOLON .

    $default  reduce using rule 29 (var_decl)


State 35

   10 function_decl: VOID ID MK_LPAREN MK_RPAREN . MK_LBRACE block MK_RBRACE

    MK_LBRACE  shift, and go to state 65


State 36

    8 function_decl: VOID ID MK_LPAREN param_list . MK_RPAREN MK_LBRACE block MK_RBRACE
   11 param_list: param_list . MK_COMMA param

    MK_RPAREN  shift, and go to state 66
    MK_COMMA   shift, and go to state 67


State 37

   12 param_list: param .

    $default  reduce using rule 12 (param_list)


State 38

   13 param: type . ID
   14      | type . ID dim_fn

    ID  shift, and go to state 68


State 39

   36 id_list: ID dim_decl .
   38 dim_decl: dim_decl . MK_LB cexpr MK_RB

    MK_LB  shift, and go to state 62

    $default  reduce using rule 36 (id_list)


State 40

   34 id_list: id_list MK_COMMA . ID
   35        | id_list MK_COMMA . ID dim_decl

    ID  shift, and go to state 69


State 41

   28 type_decl: TYPEDEF VOID id_list MK_SEMICOLON .

    $default  reduce using rule 28 (type_decl)


State 42

   27 type_decl: TYPEDEF type id_list MK_SEMICOLON .

    $default  reduce using rule 27 (type_decl)


State 43

  101 factor: ID . MK_LPAREN relop_expr_list MK_RPAREN
  107 var_ref: ID .
  108        | ID . dim_list

    MK_LB      shift, and go to state 70
    MK_LPAREN  shift, and go to state 71

    $default  reduce using rule 107 (var_ref)

    dim_list  go to state 72


State 44

   98 factor: CONST .

    $default  reduce using rule 98 (factor)


State 45

   97 factor: OP_NOT . MK_LPAREN relop_expr MK_RPAREN
  100       | OP_NOT . CONST
  103       | OP_NOT . ID MK_LPAREN relop_expr_list MK_RPAREN
  106       | OP_NOT . var_ref

    ID         shift, and go to state 73
    CONST      shift, and go to state 74
    MK_LPAREN  shift, and go to state 75

    var_ref  go to state 76


State 46

   96 factor: OP_MINUS . MK_LPAREN relop_expr MK_RPAREN
   99       | OP_MINUS . CONST
  102       | OP_MINUS . ID MK_LPAREN relop_expr_list MK_RPAREN
  105       | OP_MINUS . var_ref

    ID         shift, and go to state 77
    CONST      shift, and go to state 78
    MK_LPAREN  shift, and go to state 79

    var_ref  go to state 80


State 47

   95 factor: MK_LPAREN . relop_expr MK_RPAREN

    ID         shift, and go to state 43
    CONST      shift, and go to state 44
    OP_NOT     shift, and go to state 45
    OP_MINUS   shift, and go to state 46
    MK_LPAREN  shift, and go to state 47

    relop_expr    go to state 81
    relop_term    go to state 49
    relop_factor  go to state 50
    expr          go to state 51
    term          go to state 52
    factor        go to state 53
    var_ref       go to state 54


State 48

   51 init_id: ID OP_ASSIGN relop_expr .
   72 relop_expr: relop_expr . OP_OR relop_term

    OP_OR  shift, and go to state 82

    $default  reduce using rule 51 (init_id)


State 49

   71 relop_expr: relop_term .
   74 relop_term: relop_term . OP_AND relop_factor

    OP_AND  shift, and go to state 83

    $default  reduce using rule 71 (relop_expr)


State 50

   73 relop_term: relop_factor .

    $default  reduce using rule 73 (relop_term)


State 51

   75 relop_factor: expr .
   76             | expr . rel_op expr
   87 expr: expr . add_op term

    OP_EQ     shift, and go to state 84
    OP_NE     shift, and go to state 85
    OP_GT     shift, and go to state 86
    OP_LT     shift, and go to state 87
    OP_GE     shift, and go to state 88
    OP_LE     shift, and go to state 89
    OP_PLUS   shift, and go to state 90
    OP_MINUS  shift, and go to state 91

    $default  reduce using rule 75 (relop_factor)

    rel_op  go to state 92
    add_op  go to state 93


State 52

   88 expr: term .
   91 term: term . mul_op factor

    OP_TIMES   shift, and go to state 94
    OP_DIVIDE  shift, and go to state 95

    $default  reduce using rule 88 (expr)

    mul_op  go to state 96


State 53

   92 term: factor .

    $default  reduce using rule 92 (term)


State 54

  104 factor: var_ref .

    $default  reduce using rule 104 (factor)


State 55

   45 cfactor: CONST .

    $default  reduce using rule 45 (cfactor)


State 56

   46 cfactor: MK_LPAREN . cexpr MK_RPAREN

    CONST      shift, and go to state 55
    MK_LPAREN  shift, and go to state 56

    cexpr    go to state 97
    mcexpr   go to state 58
    cfactor  go to state 59


State 57

   37 dim_decl: MK_LB cexpr . MK_RB
   39 cexpr: cexpr . OP_PLUS mcexpr
   40      | cexpr . OP_MINUS mcexpr

    OP_PLUS   shift, and go to state 98
    OP_MINUS  shift, and go to state 99
    MK_RB     shift, and go to state 100


State 58

   41 cexpr: mcexpr .
   42 mcexpr: mcexpr . OP_TIMES cfactor
   43       | mcexpr . OP_DIVIDE cfactor

    OP_TIMES   shift, and go to state 101
    OP_DIVIDE  shift, and go to state 102

    $default  reduce using rule 41 (cexpr)


State 59

   44 mcexpr: cfactor .

    $default  reduce using rule 44 (mcexpr)


State 60

    9 function_decl: type ID MK_LPAREN MK_RPAREN . MK_LBRACE block MK_RBRACE

    MK_LBRACE  shift, and go to state 103


State 61

    7 function_decl: type ID MK_LPAREN param_list . MK_RPAREN MK_LBRACE block MK_RBRACE
   11 param_list: param_list . MK_COMMA param

    MK_RPAREN  shift, and go to state 104
    MK_COMMA   shift, and go to state 67


State 62

   38 dim_decl: dim_decl MK_LB . cexpr MK_RB

    CONST      shift, and go to state 55
    MK_LPAREN  shift, and go to state 56

    cexpr    go to state 105
    mcexpr   go to state 58
    cfactor  go to state 59


State 63

   49 init_id: ID .
   50        | ID . dim_decl
   51        | ID . OP_ASSIGN relop_expr

    OP_ASSIGN  shift, and go to state 29
    MK_LB      shift, and go to state 30

    $default  reduce using rule 49 (init_id)

    dim_decl  go to state 32


State 64

   48 init_id_list: init_id_list MK_COMMA init_id .

    $default  reduce using rule 48 (init_id_list)


State 65

   10 function_decl: VOID ID MK_LPAREN MK_RPAREN MK_LBRACE . block MK_RBRACE

    ID            shift, and go to state 106
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    IF            shift, and go to state 107
    WHILE         shift, and go to state 108
    FOR           shift, and go to state 109
    TYPEDEF       shift, and go to state 5
    MK_LBRACE     shift, and go to state 110
    MK_SEMICOLON  shift, and go to state 111
    RETURN        shift, and go to state 112

    $default  reduce using rule 22 (block)

    block      go to state 113
    decl_list  go to state 114
    decl       go to state 11
    type_decl  go to state 12
    var_decl   go to state 13
    type       go to state 115
    stmt_list  go to state 116
    stmt       go to state 117
    var_ref    go to state 118


State 66

    8 function_decl: VOID ID MK_LPAREN param_list MK_RPAREN . MK_LBRACE block MK_RBRACE

    MK_LBRACE  shift, and go to state 119


State 67

   11 param_list: param_list MK_COMMA . param

    ID     shift, and go to state 1
    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4

    param  go to state 120
    type   go to state 38


State 68

   13 param: type ID .
   14      | type ID . dim_fn

    MK_LB  shift, and go to state 121

    $default  reduce using rule 13 (param)

    dim_fn  go to state 122


State 69

   34 id_list: id_list MK_COMMA ID .
   35        | id_list MK_COMMA ID . dim_decl

    MK_LB  shift, and go to state 30

    $default  reduce using rule 34 (id_list)

    dim_decl  go to state 123


State 70

  110 dim_list: MK_LB . expr MK_RB

    ID         shift, and go to state 43
    CONST      shift, and go to state 44
    OP_NOT     shift, and go to state 45
    OP_MINUS   shift, and go to state 46
    MK_LPAREN  shift, and go to state 47

    expr     go to state 124
    term     go to state 52
    factor   go to state 53
    var_ref  go to state 54


State 71

  101 factor: ID MK_LPAREN . relop_expr_list MK_RPAREN

    ID         shift, and go to state 43
    CONST      shift, and go to state 44
    OP_NOT     shift, and go to state 45
    OP_MINUS   shift, and go to state 46
    MK_LPAREN  shift, and go to state 47

    $default  reduce using rule 84 (relop_expr_list)

    relop_expr                go to state 125
    relop_term                go to state 49
    relop_factor              go to state 50
    relop_expr_list           go to state 126
    nonempty_relop_expr_list  go to state 127
    expr                      go to state 51
    term                      go to state 52
    factor                    go to state 53
    var_ref                   go to state 54


State 72

  108 var_ref: ID dim_list .
  109 dim_list: dim_list . MK_LB expr MK_RB

    MK_LB  shift, and go to state 128

    $default  reduce using rule 108 (var_ref)


State 73

  103 factor: OP_NOT ID . MK_LPAREN relop_expr_list MK_RPAREN
  107 var_ref: ID .
  108        | ID . dim_list

    MK_LB      shift, and go to state 70
    MK_LPAREN  shift, and go to state 129

    $default  reduce using rule 107 (var_ref)

    dim_list  go to state 72


State 74

  100 factor: OP_NOT CONST .

    $default  reduce using rule 100 (factor)


State 75

   97 factor: OP_NOT MK_LPAREN . relop_expr MK_RPAREN

    ID         shift, and go to state 43
    CONST      shift, and go to state 44
    OP_NOT     shift, and go to state 45
    OP_MINUS   shift, and go to state 46
    MK_LPAREN  shift, and go to state 47

    relop_expr    go to state 130
    relop_term    go to state 49
    relop_factor  go to state 50
    expr          go to state 51
    term          go to state 52
    factor        go to state 53
    var_ref       go to state 54


State 76

  106 factor: OP_NOT var_ref .

    $default  reduce using rule 106 (factor)


State 77

  102 factor: OP_MINUS ID . MK_LPAREN relop_expr_list MK_RPAREN
  107 var_ref: ID .
  108        | ID . dim_list

    MK_LB      shift, and go to state 70
    MK_LPAREN  shift, and go to state 131

    $default  reduce using rule 107 (var_ref)

    dim_list  go to state 72


State 78

   99 factor: OP_MINUS CONST .

    $default  reduce using rule 99 (factor)


State 79

   96 factor: OP_MINUS MK_LPAREN . relop_expr MK_RPAREN

    ID         shift, and go to state 43
    CONST      shift, and go to state 44
    OP_NOT     shift, and go to state 45
    OP_MINUS   shift, and go to state 46
    MK_LPAREN  shift, and go to state 47

    relop_expr    go to state 132
    relop_term    go to state 49
    relop_factor  go to state 50
    expr          go to state 51
    term          go to state 52
    factor        go to state 53
    var_ref       go to state 54


State 80

  105 factor: OP_MINUS var_ref .

    $default  reduce using rule 105 (factor)


State 81

   72 relop_expr: relop_expr . OP_OR relop_term
   95 factor: MK_LPAREN relop_expr . MK_RPAREN

    OP_OR      shift, and go to state 82
    MK_RPAREN  shift, and go to state 133


State 82

   72 relop_expr: relop_expr OP_OR . relop_term

    ID         shift, and go to state 43
    CONST      shift, and go to state 44
    OP_NOT     shift, and go to state 45
    OP_MINUS   shift, and go to state 46
    MK_LPAREN  shift, and go to state 47

    relop_term    go to state 134
    relop_factor  go to state 50
    expr          go to state 51
    term          go to state 52
    factor        go to state 53
    var_ref       go to state 54


State 83

   74 relop_term: relop_term OP_AND . relop_factor

    ID         shift, and go to state 43
    CONST      shift, and go to state 44
    OP_NOT     shift, and go to state 45
    OP_MINUS   shift, and go to state 46
    MK_LPAREN  shift, and go to state 47

    relop_factor  go to state 135
    expr          go to state 51
    term          go to state 52
    factor        go to state 53
    var_ref       go to state 54


State 84

   77 rel_op: OP_EQ .

    $default  reduce using rule 77 (rel_op)


State 85

   80 rel_op: OP_NE .

    $default  reduce using rule 80 (rel_op)


State 86

   81 rel_op: OP_GT .

    $default  reduce using rule 81 (rel_op)


State 87

   82 rel_op: OP_LT .

    $default  reduce using rule 82 (rel_op)


State 88

   78 rel_op: OP_GE .

    $default  reduce using rule 78 (rel_op)


State 89

   79 rel_op: OP_LE .

    $default  reduce using rule 79 (rel_op)


State 90

   89 add_op: OP_PLUS .

    $default  reduce using rule 89 (add_op)


State 91

   90 add_op: OP_MINUS .

    $default  reduce using rule 90 (add_op)


State 92

   76 relop_factor: expr rel_op . expr

    ID         shift, and go to state 43
    CONST      shift, and go to state 44
    OP_NOT     shift, and go to state 45
    OP_MINUS   shift, and go to state 46
    MK_LPAREN  shift, and go to state 47

    expr     go to state 136
    term     go to state 52
    factor   go to state 53
    var_ref  go to state 54


State 93

   87 expr: expr add_op . term

    ID         shift, and go to state 43
    CONST      shift, and go to state 44
    OP_NOT     shift, and go to state 45
    OP_MINUS   shift, and go to state 46
    MK_LPAREN  shift, and go to state 47

    term     go to state 137
    factor   go to state 53
    var_ref  go to state 54


State 94

   93 mul_op: OP_TIMES .

    $default  reduce using rule 93 (mul_op)


State 95

   94 mul_op: OP_DIVIDE .

    $default  reduce using rule 94 (mul_op)


State 96

   91 term: term mul_op . factor

    ID         shift, and go to state 43
    CONST      shift, and go to state 44
    OP_NOT     shift, and go to state 45
    OP_MINUS   shift, and go to state 46
    MK_LPAREN  shift, and go to state 47

    factor   go to state 138
    var_ref  go to state 54


State 97

   39 cexpr: cexpr . OP_PLUS mcexpr
   40      | cexpr . OP_MINUS mcexpr
   46 cfactor: MK_LPAREN cexpr . MK_RPAREN

    OP_PLUS    shift, and go to state 98
    OP_MINUS   shift, and go to state 99
    MK_RPAREN  shift, and go to state 139


State 98

   39 cexpr: cexpr OP_PLUS . mcexpr

    CONST      shift, and go to state 55
    MK_LPAREN  shift, and go to state 56

    mcexpr   go to state 140
    cfactor  go to state 59


State 99

   40 cexpr: cexpr OP_MINUS . mcexpr

    CONST      shift, and go to state 55
    MK_LPAREN  shift, and go to state 56

    mcexpr   go to state 141
    cfactor  go to state 59


State 100

   37 dim_decl: MK_LB cexpr MK_RB .

    $default  reduce using rule 37 (dim_decl)


State 101

   42 mcexpr: mcexpr OP_TIMES . cfactor

    CONST      shift, and go to state 55
    MK_LPAREN  shift, and go to state 56

    cfactor  go to state 142


State 102

   43 mcexpr: mcexpr OP_DIVIDE . cfactor

    CONST      shift, and go to state 55
    MK_LPAREN  shift, and go to state 56

    cfactor  go to state 143


State 103

    9 function_decl: type ID MK_LPAREN MK_RPAREN MK_LBRACE . block MK_RBRACE

    ID            shift, and go to state 106
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    IF            shift, and go to state 107
    WHILE         shift, and go to state 108
    FOR           shift, and go to state 109
    TYPEDEF       shift, and go to state 5
    MK_LBRACE     shift, and go to state 110
    MK_SEMICOLON  shift, and go to state 111
    RETURN        shift, and go to state 112

    $default  reduce using rule 22 (block)

    block      go to state 144
    decl_list  go to state 114
    decl       go to state 11
    type_decl  go to state 12
    var_decl   go to state 13
    type       go to state 115
    stmt_list  go to state 116
    stmt       go to state 117
    var_ref    go to state 118


State 104

    7 function_decl: type ID MK_LPAREN param_list MK_RPAREN . MK_LBRACE block MK_RBRACE

    MK_LBRACE  shift, and go to state 145


State 105

   38 dim_decl: dim_decl MK_LB cexpr . MK_RB
   39 cexpr: cexpr . OP_PLUS mcexpr
   40      | cexpr . OP_MINUS mcexpr

    OP_PLUS   shift, and go to state 98
    OP_MINUS  shift, and go to state 99
    MK_RB     shift, and go to state 146


State 106

   32 type: ID .
   60 stmt: ID . MK_LPAREN relop_expr_list MK_RPAREN MK_SEMICOLON
  107 var_ref: ID .
  108        | ID . dim_list

    MK_LB      shift, and go to state 70
    MK_LPAREN  shift, and go to state 147

    OP_ASSIGN  reduce using rule 107 (var_ref)
    $default   reduce using rule 32 (type)

    dim_list  go to state 72


State 107

   58 stmt: IF . MK_LPAREN test MK_RPAREN stmt
   59     | IF . MK_LPAREN test MK_RPAREN stmt ELSE stmt

    MK_LPAREN  shift, and go to state 148


State 108

   55 stmt: WHILE . MK_LPAREN test MK_RPAREN stmt

    MK_LPAREN  shift, and go to state 149


State 109

   56 stmt: FOR . MK_LPAREN assign_expr_list MK_SEMICOLON relop_expr_list MK_SEMICOLON assign_expr_list MK_RPAREN stmt

    MK_LPAREN  shift, and go to state 150


State 110

   54 stmt: MK_LBRACE . block MK_RBRACE
